--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -34,52 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======user config========\n",
-      "{'caffe_pretrain': False,\n",
-      " 'data': 'voc',\n",
-      " 'debug_file': '/tmp/debugf',\n",
-      " 'env': 'point-link-pexist',\n",
-      " 'epoch': 14,\n",
-      " 'load_path': None,\n",
-      " 'lr': 0.001,\n",
-      " 'lr_decay': 0.1,\n",
-      " 'max_size': 448,\n",
-      " 'min_size': 448,\n",
-      " 'num_workers': 2,\n",
-      " 'plot_every': 1,\n",
-      " 'port': 8097,\n",
-      " 'pretrain_path': 'checkpoints/inceptionresnetv2.pth',\n",
-      " 'pretrained_model': 'inceptionresnetv2',\n",
-      " 'roi_sigma': 1.0,\n",
-      " 'rpn_sigma': 3.0,\n",
-      " 'test_num': 2,\n",
-      " 'test_num_workers': 8,\n",
-      " 'use_RMSprop': True,\n",
-      " 'use_adam': False,\n",
-      " 'use_chainer': False,\n",
-      " 'use_drop': False,\n",
-      " 'use_pretrain': True,\n",
-      " 'voc_data_dir': './VOCdevkit/VOC2007/',\n",
-      " 'weight_decay': 0.0005}\n",
-      "==========end============\n",
-      "load data\n",
-      "train pretrained\n",
-      "model construct completed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Setting up a new session...\n",
-      "WARNING:visdom:Without the incoming socket you cannot receive events from the server or register event handlers to your Visdom client.\n"
+     "ename": "NameError",
+     "evalue": "name 'opt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0b4d6f19a34f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'plot_every'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'env'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'point-link-pexist'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'load data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'opt' is not defined"
      ]
     }
    ],
@@ -1270,7 +1236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
